--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,31 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
   <title>深的个人博客</title>
+  <style>
+    body {
+      /* min-width: 800px; */
+      min-height: 600px;
+    }
+
+    ::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: none;
+      background: hsl(0, 0%, 80%);
+      -webkit-box-shadow: none;
+    }
+
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow: none;
+      border-radius: 10px;
+      background: transparent;
+      -webkit-box-shadow: none;
+    }
+  </style>
 </head>
 
 <body>
