--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
+  <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script> 
   <!-- built files will be auto injected -->
 </body>
 
